5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1630_2923.log
== TEST (2019-04-02 16:34:00) 
-- CODE:
Qf = float(input('Quantidade Final?' ))
Qi = float(input('Quantidade inicial?'))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qi = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:46) 
-- CODE:
Qi = float(input('Quantidade inicial:'))
Qf = 
-- ERROR:
File "XXXX", line 2
    Qf = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:36:36) 
-- CODE:
Qi = float(input('Quantidade inicial:'))
Qf = Qi*(1+Qi)*(36)
print(Qf)
-- OUTPUT:
13.4676
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:37:02) 
-- CODE:
Qi = float(input('Quantidade inicial:'))
Qf = Qi*(1+Qi)*(36)
print(round(Qf, 2)
-- ERROR:
File "XXXX", line 4
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:37:05) 
-- CODE:
Qi = float(input('Quantidade inicial:'))
Qf = Qi*(1+Qi)*(36)
print(round(Qf, 2)
-- EXECUTION TIME:
0.247188
-- ERROR:
  File "/home/codebench/codes/1630/2923/main.py", line 4
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:37:06) 
-- CODE:
Qi = float(input('Quantidade inicial:'))
Qf = Qi*(1+Qi)*(36)
print(round(Qf, 2)
-- ERROR:
File "XXXX", line 4
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:37:29) 
-- CODE:
Qi = float(input('Quantidade inicial:'))
Qf = Qi*(1+Qi)*(36)
print(round(Qf)
-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:37:40) 
-- CODE:
Qi = float(input('Quantidade inicial:'))
Qf = Qi*(1+Qi)*(36)
print(Qf)
-- OUTPUT:
13.4676
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:37:52) 
-- CODE:
Qi = float(input('Quantidade inicial:'))
Qf = Qi*(1+Qi)*(36)
print(Qf)
-- OUTPUT:
13.4676
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:38:17) 
-- CODE:
Qi = float(input( ))
Qf = Qi*(1+Qi)*(36)
print(Qf)
-- OUTPUT:
13.4676
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:38:19) 
-- CODE:
Qi = float(input( ))
Qf = Qi*(1+Qi)*(36)
print(Qf)
-- EXECUTION TIME:
0.121524
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
13.4676
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
3.7449
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
5.470416
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:38:44) 
-- CODE:
Qi = float(input( ))
Qf = Qi * (1 + Qi) * (36)
print(Qf)
-- OUTPUT:
13.4676
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:38:46) 
-- CODE:
Qi = float(input( ))
Qf = Qi * (1 + Qi) * (36)
print(Qf)
-- EXECUTION TIME:
0.13316
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
13.4676
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
3.7449
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
5.470416
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:06) 
-- CODE:
Qi = float(input( ))
Qf = Qi * (1 + Qi) * (36)
print(Qf)
-- OUTPUT:
13.4676
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:25) 
-- CODE:
Qi = float(input( ))
Qf = Qi * (1 + Qi) * (36)
print(round(Qf, 2))
-- OUTPUT:
13.47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:39:28) 
-- CODE:
Qi = float(input( ))
Qf = Qi * (1 + Qi) * (36)
print(round(Qf, 2))
-- EXECUTION TIME:
0.196868
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
13.47
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
3.74
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
5.47
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:30) 
-- CODE:
Qi = float(input( ))
Qf = Qi * (1 + Qi) * (36)
print(round(Qf, 2))
-- OUTPUT:
13.47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:40:55) 
-- CODE:
Qi = float(input( ))
Qf = Qi * (1 + Qi) * (y)/36
print(round(Qf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qf = Qi * (1 + Qi) * (y)/36
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:40:57) 
-- CODE:
Qi = float(input( ))
Qf = Qi * (1 + Qi) * (y)/36
print(round(Qf, 2))
-- EXECUTION TIME:
0.213754
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2923/main.py", line 2, in <module>
    Qf = Qi * (1 + Qi) * (y)/36
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:07) 
-- CODE:
VarInic = float(input('1550'))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qf = Qi * (1 + Qi) * (y)/36
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
